@@ -1,8 +1,14 @@
+Thu 18th Nov 2010       real.ml
+
+Finally added the theorem REAL_LE_POW_2 = |- !x. &0 <= x pow 2.
+Even though REAL_LE_SQUARE is close, it's nice not to have to make
+trivial rewrites back and forth just to use it.
+
 Thu 28th Oct 2010       Library/rstc.ml
 
 Noticed that the theorems RTC_INDUCT_L and RTC_INDUCT_R both had the hypothesis
-(!x y. R x y ==> P x y), which is redundant since it follows from the other 
-two. So I just removed it; as far as I can see there are no proof changes 
+(!x y. R x y ==> P x y), which is redundant since it follows from the other
+two. So I just removed it; as far as I can see there are no proof changes
 needed.
 
 Thu 28th Oct 2010       arith.ml, passim
